# vllmlx

./: .agent-state.json  .gitignore  .orchestration-state.json  .plan-vmlx.json  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yml  publish.yaml  release.yml
.pi/agents/: worker.md
docs/: cli-reference.md  dependency-upgrade-validation.md  installation.md  troubleshooting.md
docs/decisions/: ADR-0001-embed-mlx-vlm.md
docs/plans/: vmlx.md
docs/prds/: vmlx.md
docs/specs/: vmlx-spec.md
docs/tasks/: vmlx-phase-1.md  vmlx-phase-2.md  vmlx-phase-3.md  vmlx-phase-4.md  vmlx-phase-5.md  vmlx-phase-6.md
scripts/: run_e2e.py  update_mlx_community_catalog.py
src/vllmlx/: __init__.py  __main__.py
src/vllmlx/backend/: __init__.py  supervisor.py  worker.py
src/vllmlx/chat/: __init__.py  repl.py
src/vllmlx/cli/: __init__.py  benchmark.py  config_cmd.py  daemon_cmd.py  ls.py  main.py  pull.py  rm.py  run.py  search.py  serve.py
src/vllmlx/config/: __init__.py  config.py
src/vllmlx/daemon/: __init__.py  __main__.py  launchd.py  routes.py  server.py  state.py
src/vllmlx/models/: __init__.py  aliases.py  catalog.py  loader.py  manager.py  registry.py
src/vllmlx/models/data/: mlx_community_models.json
src/vmlx/: __init__.py  __main__.py
src/vmlx/chat/: __init__.py  repl.py
src/vmlx/cli/: __init__.py  config_cmd.py  daemon_cmd.py  ls.py  main.py  pull.py  rm.py  run.py  serve.py
src/vmlx/config/: __init__.py  config.py
src/vmlx/daemon/: __init__.py  __main__.py  idle.py  launchd.py  routes.py  server.py  state.py
src/vmlx/models/: __init__.py  aliases.py  manager.py  registry.py
tests/: __init__.py
tests/e2e/: __init__.py  harness.py  scenarios.py
tests/integration/: __init__.py  test_api.py  test_daemon_lifecycle.py  test_idle_timeout.py
tests/unit/: __init__.py  test_aliases.py  test_benchmark_cmd.py  test_catalog.py  test_config.py  test_config_cmd.py  test_daemon_cmd.py  test_idle.py  test_launchd.py  test_loader.py  test_ls_cmd.py  test_main.py  test_manager.py  test_pull_cmd.py  test_registry.py  test_repl.py  test_run_cli.py  test_search_cmd.py  test_server.py  test_state.py  test_supervisor.py  test_update_mlx_community_catalog.py  test_versioning.py  test_worker.py
