[project]
name = "vmlx"
version = "0.1.0"
description = "Ollama-style CLI for MLX-VLM"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "toml>=0.10",
    "huggingface_hub>=0.20",
    "rich>=13.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "mlx-vlm>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "httpx"]

[project.scripts]
vmlx = "vmlx.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vmlx"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
