[project]
name = "vllmlx"
dynamic = ["version"]
description = "Ollama-style daemon and CLI over vllm-mlx on Apple Silicon"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "vllmlx contributors"}
]
keywords = ["mlx", "vlm", "vision", "language", "model", "apple", "silicon", "ollama", "ai", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "toml>=0.10",
    "huggingface_hub>=0.20",
    "rich>=13.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "vllm-mlx>=0.2.6",
    "mlx-vlm>=0.4.1",
    "httpx>=0.25",
    "transformers>=5.0.0",
    "psutil>=5.9",  # System memory monitoring
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-timeout>=2.0",
    "ruff>=0.1",
    "httpx>=0.25",
]

[project.scripts]
vllmlx = "vllmlx.cli.main:cli"

[project.urls]
Homepage = "https://github.com/lewi/vllmlx"
Documentation = "https://github.com/lewi/vllmlx#readme"
Repository = "https://github.com/lewi/vllmlx"
Issues = "https://github.com/lewi/vllmlx/issues"
Changelog = "https://github.com/lewi/vllmlx/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vllmlx"]

[tool.hatch.version]
path = "src/vllmlx/__init__.py"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
